--- a/contact-me.html
+++ b/contact-me.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <h1>My Contact Details</h1>
-  <p>6704 Camden Bay Drive, Tampa FL</p>
+  <p>My fictional address</p>
   <p>0673247683</p>
   <p>goncalvesnadiar@gmail.com</p>
   <hr>
